Fixing bug 224549. Make sure JS errors are not dropped when JS is executed through nested calls through XPConnect. r=caillon@aillon.org, sr=brendan@mozilla.org, a=asa@mozilla.org